data/derived/sp14/progs/unify/prog1425.ml.out
Characters 123-124:
  let base =  if t=[] then "A" else t in
                                    ^
Error: This expression has type 'a list
       but an expression was expected of type string
